@@ -1,3 +1,7 @@
+2006-03-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* ext/R/importRIS.R: Automatic RIS import is now possible.
+
 2006-02-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R: Added RIS HTML input format.
